methods.picture.PictureMono2.scala.error
Compilation error:
PictureMono2:1: error: not found: value faireMotif
override def run() { faireMotif()
                     ^