methods.picture.PictureMono2.scala.code
override def run() { faireMotif()
}

 def fairev() {
    baisseBrosse();leveBrosse()
    avance();gauche()
    avance();baisseBrosse();leveBrosse()
    recule();droite()
    avance();baisseBrosse();leveBrosse()
  }